assets/style.css
/* Google fonts import */
@import url('https://fonts.googleapis.com/css2?family=Lato:ital,wght@0,100;0,300;0,400;0,700;0,900;1,100;1,300;1,400;1,700;1,900&family=Montserrat:ital,wght@0,100..900;1,100..900&display=swap');

body {
    margin: 0;
    padding: 0;
    font-family: "Montserrat", sans-serif;
    color: #3a3a3a;
}

header {
    background-color: #87b0e7;
    padding: .25rem;

}

/* Text styles */
h1 {
    font-weight: 800;
    font-size: larger;
    padding-left: 1rem;
    text-transform: uppercase;
}

h2 {
    font-weight: 800;
    font-size: medium;
    /* padding-left: 1rem; */
}

h3 {
    font-weight: 800;
    font-size: smaller;
    /* padding-left: 1rem; */
    text-transform: uppercase;
}

p,
label {
    font-weight: 500;
    font-size: small;
    font-style: italic;
    /* padding-left: 1rem; */
}

/* Navigation Styles */

#menu {
    font-style: normal;
    font-size: small;
    list-style-type: none;
    line-height: 20px;
    margin-left: -24px;
}

#menu a {
    text-decoration: none;
}

.active {
    color: blueviolet;
}

/* Main Section Styles */
main {
    background-color: rgba(162, 241, 162, 0.945);
    padding: .25rem;
}

.center {
    text-align: center;
    padding: 1rem .5rem;
}

.white-bg {
    background-color: white;
}

#headshot img {
    height: 120px;
    width: 120px;
    border-radius: 50%;
}

#about-image img {
    height: 100px;
}

#about-text ul {
    text-align: left;
    margin-right: 1rem;
}

#about-text li {
    font-size: smaller;
    font-style: italic;
    font-weight: 500;
    padding-bottom: .25rem;
}

/* Footer Styles */

footer {
    background-color: aqua;
    padding: .25rem 0 2rem 0;
}

#footer-container {
    display: flex;
    justify-content: space-evenly;
    list-style-type: none;
}

#footer-container i {
    font-size: 150%;
}

/* Media query: tablets and larger (576px and up) */
@media screen and (min-width: 576px) {
    #about-text ul {
        margin-left:10rem;       
    }
}

/* Media query: tablets and larger (768px and up) */
@media screen and (min-width: 768px) {
    header {
        text-align: center;
        padding-top: 2em
    }

    h1 {
        font-size: x-large;
    }

    /* nav {
        background-color:white;
    } */
    nav li {
        display: inline;
        padding-right: 1rem;
        font-size: small;
    }

    .flex-container {
        display: flex;
        justify-content: center;
        padding: 3rem 0;
        gap: 5px 30px;
    }

    #headshot img {
        height: 200px;
        width: 200px;
        border-radius: 50%;
    }

    #headshot {
        max-width: 400px;
    }

    #headshot-text {
        max-width: 300px;
        text-align: left;
    }

    #about-image {
        order: 2;
        max-width: 300px;
    }

    #about-image img {
        height: 400px;
    }

    #about-text {
        max-width: 400px;
        text-align: left;
    }
    #about-text ul {
        margin-left:0;       
    }


}

